test/types/range/deitz/test_range_iterate_error2.good
test_range_iterate_error2.chpl:1: error: halt reached - multiplication of range by zero
