test/types/range/deitz/test_range_iterate_error2.chpl
for i in ((1..4)*0, 1..5) do
  writeln(i);
